2009-11-24  Jason Smith  <dark.panda@gmail.com>

Reviewed by Alexey Proskuryakov.

        RegExp#exec's returned Array-like object behaves differently from
        regular Arrays
        https://bugs.webkit.org/show_bug.cgi?id=31689

        * LayoutTests/fast/js/regexp-in-and-foreach-handling.html: Added.
        * LayoutTests/fast/js/script-tests/regexp-in-and-foreach-handling.js: Added.
        * LayoutTests/fast/js/regexp-in-and-foreach-handling-expected.txt: Added.
2009-11-24  Jason Smith  <dark.panda@gmail.com>

        Reviewed by Alexey Proskuryakov.

        RegExp#exec's returned Array-like object behaves differently from
        regular Arrays
        https://bugs.webkit.org/show_bug.cgi?id=31689

        * JavaScriptCore/runtime/RegExpConstructor.cpp: ensure that undefined
        values are added to the returned RegExpMatchesArray

Canonical link: https://commits.webkit.org/42798@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51369 268f45cc-cd09-0410-ab3c-d52691b4dbfc